//ALL REQUEST PROTOS SHOULD INCLUDE A MinimumUserProto AS optional that represents which client sent it/triggered it 
//DO NO START PROPERTY METHODS WITH THE WORDS NEW OR COPY

import "MonsterStuff.proto";
import "Structure.proto";
import "User.proto";

package com.lvl6.proto;

option java_outer_classname = "EventUserProto";
//DO NOT USE ID AS THE NAME OF A PROPERTY IN ANY PROTO


//CALL STARTUP AFTER THIS

//if devicetoken doesnt work, itll still return success
//client can check user's diamonds to see if it went through
message UserCreateRequestProto {
     optional string udid = 1;
     optional string name = 2;
     optional string referrerCode = 3;
     optional string deviceToken = 4;
     optional int64 timeOfStructPurchase = 5; //isn't used
     optional int64 timeOfStructBuild = 6;    //isn't used
     optional CoordinateProto structCoords = 7;
     optional bool usedDiamondsToBuilt = 8;
     optional string facebookId = 9;
}

message UserCreateResponseProto {
	optional FullUserProto sender = 1;
	optional UserCreateStatus status = 2;
	
    enum UserCreateStatus {
		SUCCESS = 1;
		FAIL_INVALID_NAME = 2;
		FAIL_USER_WITH_UDID_ALREADY_EXISTS = 3;
     	FAIL_INVALID_REFER_CODE = 4;
     	FAIL_USER_WITH_FACEBOOK_ID_EXISTS = 5;
		FAIL_OTHER = 6;
	}  
}

//------------------------------------------------------------------------------------------

//client calls this whenever exp surpasses the next one
//server checks if user's exp is over the next, if so, increments user's level
																						//DONE

message LevelUpRequestProto {
	optional MinimumUserProto sender = 1;
}
																						//DONE
message LevelUpResponseProto {
     optional MinimumUserProto sender = 1;
     optional LevelUpStatus status = 2;
     //repeated FullStructureProto newlyAvailableStructs = 3;					//only new ones

	enum LevelUpStatus {
     	SUCCESS = 1;
     	NOT_ENOUGH_EXP_TO_NEXT_LEVEL = 2;
     	ALREADY_AT_MAX_LEVEL = 3;
     	OTHER_FAIL = 4;
     }
}

//------------------------------------------------------------------------------------------

message RetrieveUsersForUserIdsRequestProto {
    optional MinimumUserProto sender = 1;
	repeated int32 requestedUserIds = 2;
	optional bool includeCurMonsterTeam = 3;
}

																						//DONE
message RetrieveUsersForUserIdsResponseProto {
    optional MinimumUserProto sender = 1;
	repeated FullUserProto requestedUsers = 2;
	repeated UserCurrentMonsterTeamProto curTeam = 3;
}

//------------------------------------------------------------------------------------------

message LogoutRequestProto {
	optional MinimumUserProto sender = 1;
}

//------------------------------------------------------------------------------------------
	
message UpdateClientUserResponseProto {
     optional FullUserProto sender = 1;
     optional int64 timeOfUserUpdate = 2;                               //new Date().getTime(); milliseconds since 1/1/70
}

//------------------------------------------------------------------------------------------
	
message SetFacebookIdRequestProto {
	optional MinimumUserProto sender = 1;
	optional string fbId = 2;
}

message SetFacebookIdResponseProto {
	optional MinimumUserProto sender = 1;
	optional SetFacebookIdStatus status = 2;
	
	enum SetFacebookIdStatus {
		SUCCESS = 1;
		FAIL_OTHER = 2;
	}
}
	